makefile appears to be working

--- a/sokol_check/makefile
+++ b/sokol_check/makefile
@@ -27,11 +27,12 @@ INCLUDES = -I "."
 #	$(CC) -c $(INCLUDES) linked_list.c $@
 
 
-all: hello.o linked_list.o
+hello: hello.o linked_list.o
+	$(CC) $(INCLUDES) hello.o linked_list.o -o hello
 
 hello.o: hello.c linked_list.h
-	$(CC) $(INCLUDES) hello.c -o hello.o
+	$(CC) $(INCLUDES) hello.c -c hello.o
 
 linked_list.o: linked_list.c linked_list.h
-	$(CC) $(INCLUDES) linked_list.c -o linked_list.o
+	$(CC) $(INCLUDES) linked_list.c -c linked_list.o
 
