--- a/cloud_kitchens_inteview_prep/project_00/requirements.txt
+++ b/cloud_kitchens_inteview_prep/project_00/requirements.txt
@@ -10,6 +10,7 @@ exceptiongroup==1.3.0
 fastapi==0.115.14
 fastapi-cli==0.0.7
 fonttools==4.58.4
+greenlet==3.2.3
 h11==0.16.0
 httpcore==1.0.9
 httptools==0.6.4
@@ -40,6 +41,8 @@ rich-toolkit==0.14.8
 shellingham==1.5.4
 six==1.17.0
 sniffio==1.3.1
+SQLAlchemy==2.0.41
+sqlmodel==0.0.24
 starlette==0.46.2
 tomli==2.2.1
 typer==0.16.0
