static snake, small bug at start.

--- a/console_arcade/Makefile
+++ b/console_arcade/Makefile
@@ -7,6 +7,8 @@ OBJECTS = $(SOURCES:.c=.o)
 
 all: run
 
+build: $(TARGET)
+
 run: $(TARGET)
 	./$(TARGET)
 
@@ -18,4 +20,3 @@ $(TARGET): $(OBJECTS)
 
 clean:
 	rm -f $(TARGET) $(OBJECTS)
-
